@startuml

title __LOCATION's Class Diagram__\n

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.Anchor {
          - mac : String
          + Anchor()
          + getMac()
          + getPos()
          + setMac()
          + setPos()
          + toString()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.LbsUtils {
          {static} - START_X : double
          {static} - START_Y : double
          {static} - TRY_DISTANCE_STEP : double
          {static} + buildMapping()
          {static} + calculatePosition()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.MathTool {
          {static} - RSSI_TO_DISTANCE_A : double
          {static} - RSSI_TO_DISTANCE_N : double
          {static} + getCenterOfThreePoint()
          {static} + getDistanceBetweenTwoPoint()
          {static} + getIntersectionPointsOfTwoIntersectCircle()
          {static} + isTwoCircleIntersect()
          {static} + rssiToDistance()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.MathTool.Circle {
          + r : double
          + Circle()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.MathTool.Point {
          + x : double
          + y : double
          + Point()
          + toString()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.MathTool.PointVector2 {
          + PointVector2()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.Position {
          - posX : double
          - posY : double
          + Position()
          + getPosX()
          + getPosY()
          + toString()
          ~ setPosX()
          ~ setPosY()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace location {
      class com.ustc.location.location.UserPos {
          - userid : String
          + UserPos()
          + getPos()
          + getUserid()
          + setPos()
          + setUserid()
          + toString()
      }
    }
  }
  

  com.ustc.location.location.Anchor .up.|> java.io.Serializable
  com.ustc.location.location.Anchor o-- com.ustc.location.location.Position : pos
  com.ustc.location.location.MathTool +-down- com.ustc.location.location.MathTool.Circle
  com.ustc.location.location.MathTool +-down- com.ustc.location.location.MathTool.Point
  com.ustc.location.location.MathTool +-down- com.ustc.location.location.MathTool.PointVector2
  com.ustc.location.location.MathTool.Circle o-- com.ustc.location.location.MathTool.Point : center
  com.ustc.location.location.MathTool.PointVector2 o-- com.ustc.location.location.MathTool.Point : p1
  com.ustc.location.location.MathTool.PointVector2 o-- com.ustc.location.location.MathTool.Point : p2
  com.ustc.location.location.Position .up.|> java.io.Serializable
  com.ustc.location.location.UserPos .up.|> java.io.Serializable
  com.ustc.location.location.UserPos o-- com.ustc.location.location.Position : pos


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
